[WCMSFEQ-1193] add max-height and padding to profile panel images to prevent profile images from being cropped

--- a/CancerGov/_src/Scripts/NCI/UX/PageSpecific/Profile/ProfilePage.scss
+++ b/CancerGov/_src/Scripts/NCI/UX/PageSpecific/Profile/ProfilePage.scss
@@ -22,8 +22,10 @@ div.profile-panel img {
     position: absolute;
     top: 25px;
     left: 25px;
+    max-height: 260px;
     @include bp('(max-width: 640px)') {
         left: 25px;
+        max-height: 215px;
     }
 }
 div.profile-panel-content {
@@ -32,6 +34,7 @@ div.profile-panel-content {
     font-family: Montserrat,Avant Garde,Arial,sans-serif;
     line-height: 23px;
     font-size: 16px;
+    padding-bottom: 25px;
     @include bp('(max-width: 640px)') {
             padding-left: 25px;
             padding-top: 231px;
